@@ -11,13 +11,13 @@ import net.sourceforge.pmd.lang.jsp.ast.Token;
 
 public class JSPTokenizer implements Tokenizer {
 
-    public void tokenize(SourceCode tokens, Tokens tokenEntries) {
-	StringBuffer buffer = tokens.getCodeBuffer();
+    public void tokenize(SourceCode sourceCode, Tokens tokenEntries) {
+	StringBuffer buffer = sourceCode.getCodeBuffer();
 	TokenManager tokenMgr = Language.JSP.getDefaultVersion().getLanguageVersionHandler().getParser()
-		.getTokenManager(new StringReader(buffer.toString()));
+		.getTokenManager(sourceCode.getFileName(), new StringReader(buffer.toString()));
 	Token currentToken = (Token) tokenMgr.getNextToken();
 	while (currentToken.image.length() > 0) {
-	    tokenEntries.add(new TokenEntry(String.valueOf(currentToken.kind), tokens.getFileName(),
+	    tokenEntries.add(new TokenEntry(String.valueOf(currentToken.kind), sourceCode.getFileName(),
 		    currentToken.beginLine));
 	    currentToken = (Token) tokenMgr.getNextToken();
 	}
