@@ -3,6 +3,7 @@
  */
 package net.sourceforge.pmd.lang;
 
+import java.io.Reader;
 
 /**
  * This is a generic implementation of the Parser interface.
@@ -11,6 +12,14 @@ package net.sourceforge.pmd.lang;
  */
 public abstract class AbstractParser implements Parser {
     private String excludeMarker;
+
+    public TokenManager getTokenManager(String fileName, Reader source) {
+	TokenManager tokenManager = createTokenManager(source);
+	tokenManager.setFileName(fileName);
+	return tokenManager;
+    }
+
+    protected abstract TokenManager createTokenManager(Reader source);
 
     public String getExcludeMarker() {
 	return excludeMarker;
