@@ -6,8 +6,11 @@ package net.sourceforge.pmd.lang.java;
 import java.io.Reader;
 import java.util.Map;
 
+import test.net.sourceforge.pmd.testframework.AbstractTokenizerTest;
+
 import net.sourceforge.pmd.lang.AbstractParser;
 import net.sourceforge.pmd.lang.TokenManager;
+import net.sourceforge.pmd.lang.ast.AbstractTokenManager;
 import net.sourceforge.pmd.lang.ast.JavaCharStream;
 import net.sourceforge.pmd.lang.ast.Node;
 import net.sourceforge.pmd.lang.java.ast.JavaParser;
@@ -24,7 +27,7 @@ import net.sourceforge.pmd.lang.java.ast.ParseException;
 public abstract class AbstractJavaParser extends AbstractParser {
     private JavaParser parser;
 
-    public TokenManager getTokenManager(Reader source) {
+    public TokenManager createTokenManager(Reader source) {
 	return new JavaTokenManager(source);
     }
 
@@ -40,7 +43,8 @@ public abstract class AbstractJavaParser extends AbstractParser {
 	return parser;
     }
 
-    public Node parse(Reader source) throws ParseException {
+    public Node parse(String fileName, Reader source) throws ParseException {
+	AbstractTokenManager.setFileName(fileName);
 	return createJavaParser(source).CompilationUnit();
     }
 
