@@ -9,6 +9,7 @@ import java.util.Map;
 
 import net.sourceforge.pmd.lang.AbstractParser;
 import net.sourceforge.pmd.lang.TokenManager;
+import net.sourceforge.pmd.lang.ast.AbstractTokenManager;
 import net.sourceforge.pmd.lang.ast.JavaCharStream;
 import net.sourceforge.pmd.lang.ast.Node;
 import net.sourceforge.pmd.lang.ast.ParseException;
@@ -18,11 +19,12 @@ import net.sourceforge.pmd.lang.ast.ParseException;
  */
 public class JspParser extends AbstractParser {
 
-    public TokenManager getTokenManager(Reader source) {
+    public TokenManager createTokenManager(Reader source) {
 	return new JspTokenManager(source);
     }
 
-    public Node parse(Reader source) throws ParseException {
+    public Node parse(String fileName, Reader source) throws ParseException {
+	AbstractTokenManager.setFileName(fileName);
 	return new net.sourceforge.pmd.lang.jsp.ast.JspParser(new JavaCharStream(source)).CompilationUnit();
     }
 
